[gd_scene load_steps=7 format=3 uid="uid://dgwxh5blkfje"]

[ext_resource type="FontFile" uid="uid://cvs2kj5ouuwty" path="res://UI/Fonts/toxigenesis.rg-bold.otf" id="1_cy7vy"]
[ext_resource type="Theme" uid="uid://dhq1th0sqj2u7" path="res://UI/Fonts/Text_font.tres" id="1_qdbyt"]
[ext_resource type="Script" path="res://UI/menus.gd" id="1_sk65e"]
[ext_resource type="Shader" path="res://UI/Blur_menu.gdshader" id="2_x457k"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ayjqv"]
shader = ExtResource("2_x457k")
shader_parameter/blur_radius = 8
shader_parameter/Darkness = 0.1
shader_parameter/R = 0.0
shader_parameter/G = 0.0
shader_parameter/B = 0.0
shader_parameter/blur_strength = 1.0

[sub_resource type="LabelSettings" id="LabelSettings_8qt6c"]
font = ExtResource("1_cy7vy")
font_size = 25

[node name="GoalUI" type="Control"]
process_mode = 3
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_sk65e")

[node name="ColorRect" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_ayjqv")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 1, 1, 0.164706)

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_right = 20.0
offset_bottom = 23.0
grow_horizontal = 2
text = "Stage completed! Enter your name to upload your time!"
label_settings = SubResource("LabelSettings_8qt6c")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -74.0
offset_top = 53.0
offset_right = 74.0
offset_bottom = 159.0
grow_horizontal = 2
grow_vertical = 2

[node name="Submit" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_qdbyt")
text = "Submit
"

[node name="Skip" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_qdbyt")
text = "Skip
"

[node name="LineEdit" type="LineEdit" parent="."]
process_mode = 3
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -172.5
offset_top = -25.5
offset_right = 172.5
offset_bottom = 25.5
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_qdbyt")
placeholder_text = "Enter name:"

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="pressed" from="VBoxContainer/Submit" to="." method="_on_submit_pressed"]
[connection signal="pressed" from="VBoxContainer/Skip" to="." method="_on_skip_pressed"]
